--- a/src/index.css
+++ b/src/index.css
@@ -39,9 +39,13 @@ th {
   background-color: #2a2c2e;
   color: #fff;
 }
+.app-title {
+  display: flex;
+  align-items: center; /* Aligns items vertically in the center */
+}
 
 .logo {
-  width: 50px;
+  width: 100px;
   height: auto;
   margin-right: 10px;
 }
@@ -220,6 +224,10 @@ input[list="table-options"] {
 #queryInput {
   max-width: 100%;
   margin: 10px;
+}
+.error-message {
+  color: red;
+  font-style: italic;
 }
 
 select, p {
