--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,21 @@
   box-sizing: border-box;
 }
 
+:root {
+  --bg-color: #3d3939;
+  --text-color: #e0e0e0;
+  --table-bg-color: #1e1e1e;
+  --border-color: #333;
+  --primary-color: #333;
+  --font-family: Arial, sans-serif;
+  --font-size: 16px;
+}
+
 body {
-  font-family: Arial, sans-serif;
-  background-color: #3d3939; /* Dark background */
-  color: #e0e0e0; /* Light text */
-  line-height: 1.6;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  font-family: var(--font-family);
+  font-size: var(--font-size);
 }
 
 /* Table styling */
@@ -17,18 +27,18 @@ table {
   width: 100%;
   border-collapse: collapse;
   margin-top: 20px;
-  background-color: #1e1e1e; /* Darker background for tables */
+  background-color: var(--table-bg-color);
 }
 
 th, td {
-  border: 1px solid #333; /* Darker borders */
+  border: 1px solid var(--border-color);
   padding: 8px;
   text-align: left;
-  color: #ddd; /* Lighter text for readability */
+  color: #ddd;
 }
 
 th {
-  background-color: #333; /* Dark header cells */
+  background-color: var(--border-color);
 }
 
 .app-header {
@@ -36,16 +46,17 @@ th {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #2a2c2e;
+  background-color: #0f1011;
   color: #fff;
 }
+
 .app-title {
   display: flex;
-  align-items: center; /* Aligns items vertically in the center */
+  align-items: center;
 }
 
 .logo {
-  width: 100px;
+  width: 150px;
   height: auto;
   margin-right: 10px;
 }
@@ -65,67 +76,50 @@ th {
   border-radius: 50%;
 }
 
-.secondary-header {
+.header-navigation {
   display: flex;
+  align-items: center;
+  flex-grow: 1;
   justify-content: center;
-  background-color: #333;
-  padding: 10px 0;
+}
+
+.tab-button {
+  margin: 0 20px;
+  padding: 10px 20px;
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+  position: relative;
+}
+
+.tab-button:hover {
+  color: #ccc;
+}
+
+.tab-button.active::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  position: absolute;
+  bottom: -10px;
+  left: 0;
 }
 
 .tertiary-header {
   text-align: center;
   padding: 10px;
-  background-color: #444; /* Slightly lighter than the secondary header for contrast */
+  background-color: #444;
   color: #fff;
 }
 
 .tab-subtext {
-  font-size: 16px; /* Adjust font size as needed */
-  color: #ccc; /* Lighter color for readability */
-}
-
-.tab-button {
-  margin: 0 10px;
-  padding: 10px 20px;
-}
-
-/* Ensure the content area is clear of the headers */
-.content {
-  padding: 20px;
-  min-height: 80vh; /* Adjust based on actual content needs */
-  max-width: 60vw;
-  margin: auto;
-}
-
-/* Header styling */
-h1 {
-  color: #fff; /* White headers for contrast */
-  text-align: center; /* Center align headers */
-}
-
-h2 {
-  color: #fff; /* White headers for contrast */
-  text-align: left; /* Center align headers */
-  margin-left: 10px;
-}
-
-h4 {
-  color: #fff; /* White headers for contrast */
-  text-align: center; /* Center align headers */
-  margin-bottom: 20px;
-}
-
-/* Form styling */
-form {
-  display: flex;
-  flex-direction: column; /* Align items in a column */
-  align-items: left; /* Center-align items */
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-label {
-  display: block; /* Ensure each label is a block to take full width */
-  margin-bottom: 10px; /* Space between each form control */
+  font-size: 18px;
+  color: #ccc;
+  margin-top: 5px;
 }
 
 .tab-menu {
@@ -134,116 +128,91 @@ label {
   margin-bottom: 20px;
 }
 
-/* .tab-button {
-  width: 450px;
-  height: 450px;
-  padding: 5px;
-  margin: 0 5px;
-  border: none;
-  background-color: #333;
-  color: #fff;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  font-size: 24px;
-  text-align: center;
-  line-height: 1.2;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-} */
-
-.tab-subtext {
-  font-size: 18px; /* Smaller font size for subtext */
-  color: #ccc; /* Lighter color for subtext */
-  margin-top: 5px; /* Space between main text and subtext */
+/* Ensure the content area is clear of the headers */
+.content {
+  padding: 20px;
+  min-height: 80vh;
+  max-width: 60vw;
+  margin: auto;
 }
 
-.tab-button:hover {
-  background-color: #555; /* Lighter on hover */
-}
-
-.tab-button.active {
-  background-color: #37266b;
-  color: white;
-  border-bottom: 2px solid #2a1d52;
+.search-and-filter {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 .frame {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 20px;
   margin: 20px 0;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
+  padding: 20px;
 }
 
-.frame h3 {
-  position: relative;
-  padding: 10px; /* Adjusted padding for better spacing */
-  margin: -10px -10px 10px -10px;
-  background-color: #f0f0f0; /* Light gray background for highlight */
-  width: calc(100% + 20px); /* Adjust width to account for padding */
-  border-radius: 4px 4px 0px 0px;
-  color: #333;
+.left-column, .right-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.section-header, .section-content {
+  margin-bottom: 20px;
+}
+
+.section-header {
+  margin-bottom: 10px;
+}
+
+.section-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.table-select, .column-select, .geography-select {
+  margin-bottom: 20px;
+}
+
+.select-all-btn {
+  margin-bottom: 10px;
 }
 
 .query-form {
   margin-bottom: 20px;
 }
 
-input[type="text"] {
-  padding: 8px;
-  margin: 10px; /* Space between input and button */
-  border: 1px solid #555; /* Darker borders */
-  background-color: #333; /* Dark input fields */
-  color: #fff; /* White text */
-  border-radius: 4px; /* Rounded borders for the input */
-}
-input[list="table-options"] {
-  padding: 8px;
-  width: 500px; /* Set width of the input */
-  margin: 10px; /* Space between input and button */
-  border: 1px solid #555; /* Darker borders */
-  background-color: #333; /* Dark input fields */
-  color: #fff; /* White text */
-  border-radius: 4px; /* Rounded borders for the input */
-}
-.query-input {
-  display: flex; /* Set the query-input div as a flex container */
-  align-items: center; /* Align items vertically in the center */
-  width: 100%; /* Ensure it fills the container */
+input[type="text"], .table-input, .dropdown {
+  width: 100%;
+  padding: 12px;
+  margin: 10px 0;
+  border: 2px solid #555;
+  background-color: #333;
+  color: #fff;
+  border-radius: 2px;
+  font-weight: bold;
 }
 
-.query-input input[type="text"] {
-  flex-grow: 1; /* Allow the input to grow and fill available space */
-  margin-right: 10px; /* Add some space between the input and the button */
+.query-input {
+  display: flex;
+  align-items: center;
 }
 
 .query-input button {
-  white-space: nowrap; /* Prevent the button text from wrapping */
+  white-space: nowrap;
 }
+
 #queryInput {
   max-width: 100%;
   margin: 10px;
 }
+
 .error-message {
   color: red;
   font-style: italic;
 }
 
 select, p {
-  width: 100%; /* Full width for selects and paragraph */
+  width: 100%;
   padding: 8px;
-}
-
-.dropdown {
-  width: 50%;
-  padding: 8px;
-  border-radius: 4px;
-  margin: 10px; /* Space between input and button */
-  border: 1px solid #555; /* Darker borders */
-  background-color: #333; /* Dark input fields */
-  color: #fff; /* White text */
-  border-radius: 4px; /* Rounded borders for the input */
 }
 
 button {
@@ -252,21 +221,38 @@ button {
   background-color: #4e3c85;
   color: white;
   border: none;
-  border-radius: 4px; /* Rounded borders for the button */
+  border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
+
 button.selected {
   background-color: #64578d;
   color: white;
 }
 
 button:hover {
-  background-color: #8d80b5;; /* Darker shade on hover */
+  background-color: #8d80b5;
+}
+
+.select-all-btn {
+  display: block;
+  margin-bottom: 10px;
+  padding: 10px 20px;
+  background-color: #ff9800;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.select-all-btn:hover {
+  background-color: #e68900;
 }
 
 ul {
-  list-style-type: none; /* Remove bullet points */
+  list-style-type: none;
   margin-left: 10px;
   display: flex;
   flex-direction: column;
@@ -274,16 +260,16 @@ ul {
 
 ul li {
   cursor: pointer;
-  color: #ddd; /* Lighter text for readability */
+  color: #ddd;
 }
 
 ul li:hover {
-  text-decoration: underline; /* Underline on hover */
+  text-decoration: underline;
 }
 
 .loader {
-  border: 6px solid #2c2c2c; /* Dark grey */
-  border-top: 6px solid #3498db; /* Blue */
+  border: 6px solid #2c2c2c;
+  border-top: 6px solid #3498db;
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -296,10 +282,10 @@ ul li:hover {
 }
 
 .table-container {
-  max-height: 400px; /* Set a maximum height for the table container */
-  overflow-y: auto; /* Enable vertical scrolling */
-  margin-top: 20px; /* Optional: add some space above the table */
-  border: 1px solid #333; /* Darker border */
+  max-height: 400px;
+  overflow-y: auto;
+  margin-top: 20px;
+  border: 1px solid var(--border-color);
 }
 
 .table-select {
@@ -307,22 +293,3 @@ ul li:hover {
   align-items: center;
   gap: 10px;
 }
-
-.year-select {
-  width: 100px;
-}
-
-.select-all-btn {
-  display: block;
-  margin-bottom: 10px;
-  padding: 5px 10px;
-  background-color: #0063ce;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.select-all-btn:hover {
-  background-color: #00448e;
-}
-
