--- a/src/index.css
+++ b/src/index.css
@@ -253,6 +253,14 @@ input[type="text"], .table-input, .dropdown {
   margin: 10px;
 }
 
+.example-queries {
+  width: 100%;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .error-message {
   color: red;
   font-style: italic;
