--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ table {
   border-collapse: collapse;
   margin-top: 20px;
   background-color: var(--table-bg-color);
+  min-width: 100%;
 }
 
 th, td {
@@ -220,7 +221,8 @@ input[type="text"], .table-input, .dropdown {
 
 .dropdown-options {
   position: absolute;
-  width: 200%;
+  width: 250%;
+  min-height: 300px;
   max-height: 300px;
   overflow-y: auto;
   background: white;
@@ -337,11 +339,29 @@ ul li:hover {
   100% { transform: rotate(360deg); }
 }
 
+.table-display-container {
+  width: 100%;
+  max-width: 100vw; /* Set maximum width to 80vw */
+  margin-left: auto; /* Center the container */
+  margin-right: auto; /* Center the container */
+}
+
 .table-container {
-  max-height: 400px;
+  max-height: 90vh;
   overflow-y: auto;
+  overflow-x: auto; /* Allow horizontal scrolling */
   margin-top: 20px;
   border: 1px solid var(--border-color);
+  max-width: 80vw; /* Set maximum width to 80vw */
+  margin-left: auto; /* Center the container */
+  margin-right: auto; /* Center the container */
+}
+
+table {
+  width: 100%; /* Ensure the table takes up the full width of its container */
+  border-collapse: collapse;
+  margin-top: 20px;
+  background-color: var(--table-bg-color);
 }
 
 .table-select {
